# netbox-monitor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/netbox_monitor/: __init__.py  __main__.py  bootstrap.py  config.py  config_transfer.py  context.py  logging_setup.py  net_utils.py  oui.py  scheduler.py  settings_store.py  state.py  status.py
src/netbox_monitor/clients/: netbox.py  proxmox.py  secrets.py  technitium.py
src/netbox_monitor/lldp/: __init__.py  arista_ssh_driver.py  aruba_ssh_driver.py  cisco_ssh_driver.py  mikrotik_ssh_driver.py  registry.py  snmp_driver.py  ssh_common.py  unifi_ssh_driver.py
src/netbox_monitor/sync/: __init__.py  availability.py  certs.py  cleanup.py  common.py  dhcp.py  discovery.py  dns.py  lldp.py  proxmox.py
src/netbox_monitor/webui/: app.py  auth.py
tests/: conftest.py  test_availability.py  test_cleanup.py  test_config.py  test_config_compat.py  test_config_transfer.py  test_dhcp_sync.py  test_dns_sync.py  test_lldp_crawl.py  test_lldp_parse.py  test_lldp_parsers.py  test_lldp_sites.py  test_multisite.py  test_netbox_guard.py  test_oui.py  test_settings_store.py  test_site_migrate.py  test_state.py  test_technitium.py  test_webui.py
tests/fixtures/config_exports/: 2.3.0-encrypted.json  2.3.0-redacted.json  2.3.1-encrypted.json  2.3.1-redacted.json  2.3.2-encrypted.json  2.3.2-redacted.json  2.4.0-encrypted.json  2.4.0-redacted.json  2.4.1-encrypted.json  2.4.1-redacted.json  (+2 more)
(+12 files in other folders)
