[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netbox-monitor"
version = "2.1.0"
description = "Network auto-documentation service: syncs Technitium DNS/DHCP, ping discovery, Proxmox, LLDP topology, and SSL certs into NetBox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynetbox>=7.4",
    "httpx>=0.27",
    "proxmoxer>=2.0",
    "requests>=2.31",
    "icmplib>=3.0",
    "pysnmp>=7.1",
    "asyncssh>=2.14",
    "cryptography>=42.0",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "aiosqlite>=0.20",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
netbox-monitor = "netbox_monitor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/netbox_monitor"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
